k8s/qa/ingress-domain/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-votingapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-qa
  rules:
  - host: brief8-qa.simplon-lion.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: votingapp
            port:
              number: 80
